# MoP

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Implementation.md  README.md  RELEASE_NOTES_v0.45.0.md  RELEASE_NOTES_v0.46.0.md  SECURITY.md  pyproject.toml
docs/: README.md  academic_claim_standard.md  api_overview.md  architecture.md  colab_training.md  command_cookbook.md  config_templates.md  efficiency_report_template.md  examples_guide.md  gpu_efficiency_benchmarking.md  gpu_job_profiles.md  gpu_quickstart.md  gpu_runtime_limitations.md  installation.md  known_limitations.md  production_2b_readiness.md  quickstart.md  release_checklist.md  research_positioning.md  serious_jobs_checklist.md  startup_product_claim_standard.md  warm_sparse_efficiency_comparison_template.md
examples/: analyze_results.py  build_module_training_queue.py  build_paper_report.py  build_repair_lessons_from_tiny_eval.py  create_lessons.py  create_run_manifests.py  evaluate_tiny_generated_code.py  feedback_aware_curriculum.py  generate_coding_bugfix_lessons.py  gpu_gradient_accumulation_demo.py  gpu_job_profile_validate.py  gpu_memory_estimate.py  gpu_mop_routing_demo.py  gpu_resume_demo.py  gpu_torchrun_dry_run.py  gpu_train_tiny_smoke.py  import_results_demo.py  index_kts_lessons.py  manage_artifacts_and_checkpoints.py  manage_datasets.py  manage_models.py  read_and_filter_lessons.py  resume_training_demo.py  run_ablation.py  run_baseline_comparison.py  run_benchmarks.py  run_cli_configs.py  run_continued_pretraining.py  run_curriculum_training.py  run_experiment_matrix.py  (+18 more)
(+543 files in other folders)
